--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^10.0.2",
     "@testing-library/user-event": "^10.0.1",
     "firebase": "^7.13.1",
+    "now": "^17.1.1",
     "prop-types": "^15.6.2",
     "re-base": "^4.0.0",
     "react": "^16.5.2",
@@ -26,7 +27,6 @@
   },
   "browserslist": [
     ">0.2%",
-    "not dead",
     "not ie <= 11",
     "not op_mini all"
   ],
